fixed middle section spacing-added top margin

--- a/index.css
+++ b/index.css
@@ -187,6 +187,7 @@ nav .involvement:hover {
     box-sizing: border-box;
     width: 90%;
     margin: auto;
+    margin-top:3%;
 	text-align:center;
 }
 
